# glacier-settings-developermode

./: CMakeLists.txt  transifex.yml
daemon/: CMakeLists.txt  main.cpp  nemo-developermode-dbus.conf  nemodebugmode.service  systemdconnector.cpp  systemdconnector.h  userspaceconnector.cpp  userspaceconnector.h
org.glacier.developermode/: CMakeLists.txt  developermode.cpp  developermode.h  plugin.cpp  qmldir
plugin/: CMakeLists.txt  developermode.h  development.qml  developmentsettingsplugin.cpp  developmentsettingsplugin.h
plugin/translations/: developermode.ts  developermode_cs.ts  developermode_de.ts  developermode_es.ts  developermode_pl.ts  developermode_ru.ts  developermode_sk_SK.ts  development.ts  development_cs.ts  development_fi.ts  development_nl.ts  development_ru.ts  development_uk.ts
